tests/errors/semantics/cannot_do_cast.odl
main :: () -> void  {
    arr := [2]int.{1, 2};
    arr as int;
};